Quick favorites can be duplicated #110497

Closed
opened 2023-07-26 15:53:35 +02:00 by Damien Picard · 4 comments
Member

System Information
Operating system: Linux-6.2.0-26-generic-x86_64-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.54.03

Blender Version
Broken: version: 4.0.0 Alpha, branch: main (modified), commit date: 2023-07-24 19:22, hash: 13ec961c4a97
Worked: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: c7fc78b81ecb

Short description of error
Buttons can be added to quick favorites even if they are already there.

Exact steps for others to reproduce the error

  • Add a button to quick favorites, for example the Object menu from the viewport
  • Check that it’s been added
  • Do it again
  • Check that it’s been added again.

**System Information** Operating system: Linux-6.2.0-26-generic-x86_64-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.54.03 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main (modified), commit date: 2023-07-24 19:22, hash: `13ec961c4a97` Worked: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: `c7fc78b81ecb` **Short description of error** Buttons can be added to quick favorites even if they are already there. **Exact steps for others to reproduce the error** - Add a button to quick favorites, for example the Object menu from the viewport - Check that it’s been added - Do it again - Check that it’s been added again. <video src="/attachments/954936e9-bd35-46f1-8e48-8198c3f7abb3" title="quick_favorites_duplicates.mp4" controls></video>
Damien Picard added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-07-26 15:53:36 +02:00
Member

Thanks for the report. I can confirm

Thanks for the report. I can confirm
Pratik Borhade self-assigned this 2023-07-27 05:25:00 +02:00
Member

Interesting. I'm pretty sure it just simply didn't handle such cases.

Interesting. I'm pretty sure it just simply didn't handle such cases.
Member

Interesting. I'm pretty sure it just simply didn't handle such cases.

Yes, guess so. But in earlier version "add to quick favourites" option is removed from context menu once added to the list.
Haven't bisected yet. Will find the culprit commit and fix :)

> Interesting. I'm pretty sure it just simply didn't handle such cases. Yes, guess so. But in earlier version "add to quick favourites" option is removed from context menu once added to the list. Haven't bisected yet. Will find the culprit commit and fix :)
Member

Caused by adb370e6ba
Fix: #110517

Caused by adb370e6ba Fix: https://projects.blender.org/blender/blender/pulls/110517
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-27 13:35:40 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110497
No description provided.