Fix #110497: Quick favorites can be duplicated

Mistake in adb370e6ba
Skip "add to quick favorites" button from context menu when button is
found in user_menu.

Pull Request: https://projects.blender.org/blender/blender/pulls/110517